--- a/src/app/afakulcs/afakulcs-egy/afakulcs-egy.component.html
+++ b/src/app/afakulcs/afakulcs-egy/afakulcs-egy.component.html
@@ -32,7 +32,10 @@
 
   <ng-container *ngIf="afakulcsservice.EgyMode === 1">
     <div [@rowanimation]>
-      <app-afakulcs-reszletek></app-afakulcs-reszletek>
+      <app-reszletek [cim]="afakulcsservice.cim"
+                     [item]="afakulcsservice.Dto[afakulcsservice.DtoSelectedIndex]"
+                     [colsets]="afakulcsservice.ReszletekSettings">
+      </app-reszletek>
     </div>
   </ng-container>
   <ng-container *ngIf="afakulcsservice.EgyMode === 2">
