--- a/src/app/csoport/csoport-egy/csoport-egy.component.html
+++ b/src/app/csoport/csoport-egy/csoport-egy.component.html
@@ -38,22 +38,37 @@ Jog = 5
 }-->
 
   <ng-container *ngIf="csoportservice.EgyMode === 1">
-    <app-csoport-reszletek></app-csoport-reszletek>
+    <div [@rowanimation]>
+      <app-csoport-reszletek></app-csoport-reszletek>
+    </div>
   </ng-container>
   <ng-container *ngIf="csoportservice.EgyMode === 2">
-    <app-csoport-torles></app-csoport-torles>
+    <div [@rowanimation]>
+      <app-tetel-torles [cim]="csoportservice.cim"
+                        [eppFrissit]="eppFrissit"
+                        (OkClick)="TorlesOk()"
+                        (CancelClick)="TorlesCancel()">
+      </app-tetel-torles>
+    </div>
   </ng-container>
   <ng-container *ngIf="csoportservice.EgyMode === 3">
-    <app-csoport-szerkesztes></app-csoport-szerkesztes>
+    <div [@rowanimation]>
+      <app-csoport-szerkesztes></app-csoport-szerkesztes>
+    </div>
   </ng-container>
   <ng-container *ngIf="csoportservice.EgyMode === 4">
-    <app-csoport-felhasznalo></app-csoport-felhasznalo>
+    <div [@rowanimation]>
+      <app-csoport-felhasznalo></app-csoport-felhasznalo>
+    </div>
   </ng-container>
   <ng-container *ngIf="csoportservice.EgyMode === 5">
-    <app-csoport-jog></app-csoport-jog>
+    <div [@rowanimation]>
+      <app-csoport-jog></app-csoport-jog>
+    </div>
   </ng-container>
 
   <app-errormodal [cim]="csoportservice.cim"></app-errormodal>
+  <app-spinner *ngIf="eppFrissit"></app-spinner>
 </div>
 
 
