--- a/src/app/szamlazasirend/projekt-szamlazasirend-egy/projekt-szamlazasirend-egy.component.html
+++ b/src/app/szamlazasirend/projekt-szamlazasirend-egy/projekt-szamlazasirend-egy.component.html
@@ -27,14 +27,25 @@
   Modositas = 3
   }-->
   <ng-container *ngIf="szamlazasirendservice.EgyMode === 1">
-    <app-projekt-szamlazasirend-reszletek></app-projekt-szamlazasirend-reszletek>
+    <div [@rowanimation]>
+      <app-projekt-szamlazasirend-reszletek></app-projekt-szamlazasirend-reszletek>
+    </div>
   </ng-container>
   <ng-container *ngIf="szamlazasirendservice.EgyMode === 2">
-    <app-projekt-szamlazasirend-torles></app-projekt-szamlazasirend-torles>
+    <div [@rowanimation]>
+      <app-tetel-torles [cim]="afakulcsservice.cim"
+                        [eppFrissit]="eppFrissit"
+                        (OkClick)="TorlesOk()"
+                        (CancelClick)="TorlesCancel()">
+      </app-tetel-torles>
+    </div>
   </ng-container>
   <ng-container *ngIf="szamlazasirendservice.EgyMode === 3">
-    <app-projekt-szamlazasirend-szerkesztes></app-projekt-szamlazasirend-szerkesztes>
+    <div [@rowanimation]>
+      <app-projekt-szamlazasirend-szerkesztes></app-projekt-szamlazasirend-szerkesztes>
+    </div>
   </ng-container>
 
   <app-errormodal [cim]="szamlazasirendservice.cim"></app-errormodal>
+  <app-spinner *ngIf="eppFrissit"></app-spinner>
 </div>
