--- a/src/app/ugyfel/ugyfel-egy/ugyfel-egy.component.html
+++ b/src/app/ugyfel/ugyfel-egy/ugyfel-egy.component.html
@@ -20,6 +20,9 @@
               (click)="modositas()" class="btn btn-sm btn-outline-primary navgomb">
         <i class="fa fa-edit" aria-hidden="true"></i>
       </button>
+      <button [disabled]="eppFrissit" (click)="csoport()" class="btn btn-sm btn-outline-primary navgomb">
+        Csoport
+      </button>
       <button [disabled]="eppFrissit" (click)="projekt()" class="btn btn-sm btn-outline-primary navgomb">
         Projekt
       </button>
@@ -34,7 +37,8 @@
     Torles = 2,
     Modositas = 3,
     Projekt = 4,
-CreateNewLinkLink = 5
+    UgyfelterLink = 5,
+    Csoport = 6
     }-->
 
   <ng-container *ngIf="ugyfelservice.EgyMode === 1">
@@ -54,6 +58,15 @@ CreateNewLinkLink = 5
   <ng-container *ngIf="ugyfelservice.EgyMode === 3">
     <div [@rowanimation]>
       <app-ugyfel-szerkesztes></app-ugyfel-szerkesztes>
+    </div>
+  </ng-container>
+  <ng-container *ngIf="ugyfelservice.EgyMode === 6">
+    <div [@rowanimation]>
+      <app-ugyfel-csoport [selected]="ugyfelservice.DtoEdited.Csoport"
+                          [eppFrissit]="eppFrissit"
+                          (OkClick)="CsoportOk($event)"
+                          (CancelClick)="CsoportCancel()">
+      </app-ugyfel-csoport>
     </div>
   </ng-container>
   <ng-container *ngIf="ugyfelservice.EgyMode === 4">
