--- a/src/app/ugyfel/ugyfel-csoport/ugyfel-csoport.component.html
+++ b/src/app/ugyfel/ugyfel-csoport/ugyfel-csoport.component.html
@@ -1,7 +1,7 @@
 <div class="alapkeret">
   <h5>Csoport</h5>
 
-  <form #f="ngForm" (ngSubmit)="onSubmit()">
+  <form #f="ngForm">
 
     <div class="row no-gutters editform-row">
       <div class="col-md-2">
