elsokereses nem a szervizekben

--- a/src/app/esemenynaplo/esemenynaplo.component.html
+++ b/src/app/esemenynaplo/esemenynaplo.component.html
@@ -27,7 +27,7 @@
     </tr>
     </tbody>
   </table>
-  <app-toolbarfooter [enKereses]="!esemenynaploservice.elsokereses && !eppFrissit"
+  <app-toolbarfooter [enKereses]="!elsokereses && !eppFrissit"
                      [rekordszam]="esemenynaploservice.Dto.length"
                      [osszesrekord]="esemenynaploservice.OsszesRekord"
                      (KeresesTovabb)="onKeresesTovabb()">
