--- a/src/app/irat/irat/irat-list/irat-list.component.html
+++ b/src/app/irat/irat/irat-list/irat-list.component.html
@@ -36,7 +36,7 @@
     </tr>
     </tbody>
   </table>
-  <app-toolbarfooter [enKereses]="!iratservice.elsokereses && !eppFrissit"
+  <app-toolbarfooter [enKereses]="!elsokereses && !eppFrissit"
                      [rekordszam]="iratservice.Dto.length"
                      [osszesrekord]="iratservice.OsszesRekord"
                      (KeresesTovabb)="onKeresesTovabb()">
