--- a/src/app/penztar/penztartetel/penztartetel-list/penztartetel-list.component.html
+++ b/src/app/penztar/penztartetel/penztartetel-list/penztartetel-list.component.html
@@ -35,7 +35,7 @@
     </ng-container>
     </tbody>
   </table>
-  <app-toolbarfooter [enKereses]="!penztartetelservice.elsokereses && !eppFrissit"
+  <app-toolbarfooter [enKereses]="!elsokereses && !eppFrissit"
                      [rekordszam]="penztartetelservice.Dto.length"
                      [osszesrekord]="penztartetelservice.OsszesRekord"
                      (KeresesTovabb)="onKeresesTovabb()">
