felhasználó leíró már a szerverről

--- a/src/app/primitiv/felhasznalo/felhasznalo-container/felhasznalo-container.component.html
+++ b/src/app/primitiv/felhasznalo/felhasznalo-container/felhasznalo-container.component.html
@@ -17,3 +17,6 @@
 <ng-container *ngIf="felhasznaloservice.ContainerMode === 3">
   <app-felhasznalo-szerkesztes></app-felhasznalo-szerkesztes>
 </ng-container>
+
+<app-errormodal [cim]="felhasznaloservice.cim"></app-errormodal>
+<app-spinner *ngIf="eppFrissit"></app-spinner>
