--- a/src/app/primitiv/felhasznalo/felhasznalo-egy/felhasznalo-egy.component.html
+++ b/src/app/primitiv/felhasznalo/felhasznalo-egy/felhasznalo-egy.component.html
@@ -41,7 +41,10 @@ Tevekenyseg = 5
 
   <ng-container *ngIf="felhasznaloservice.EgyMode === 1">
     <div [@rowanimation]>
-      <app-felhasznalo-reszletek></app-felhasznalo-reszletek>
+      <app-reszletek [cim]="felhasznaloservice.cim"
+                     [item]="felhasznaloservice.Dto[felhasznaloservice.DtoSelectedIndex]"
+                     [colsets]="felhasznaloservice.ReszletekSettings">
+      </app-reszletek>
     </div>
   </ng-container>
   <ng-container *ngIf="felhasznaloservice.EgyMode === 2">
