primitivek leírói már a szerverről

--- a/src/app/primitiv/irattipus/irattipus-container/irattipus-container.component.html
+++ b/src/app/primitiv/irattipus/irattipus-container/irattipus-container.component.html
@@ -17,3 +17,6 @@
 <ng-container *ngIf="irattipusservice.ContainerMode === 3">
   <app-irattipus-szerkesztes></app-irattipus-szerkesztes>
 </ng-container>
+
+<app-errormodal [cim]="irattipusservice.cim"></app-errormodal>
+<app-spinner *ngIf="eppFrissit"></app-spinner>
