--- a/src/app/primitiv/teendo/teendo-container/teendo-container.component.html
+++ b/src/app/primitiv/teendo/teendo-container/teendo-container.component.html
@@ -17,3 +17,6 @@
 <ng-container *ngIf="teendoservice.ContainerMode === 3">
   <app-teendo-szerkesztes></app-teendo-szerkesztes>
 </ng-container>
+
+<app-errormodal [cim]="teendoservice.cim"></app-errormodal>
+<app-spinner *ngIf="eppFrissit"></app-spinner>
