--- a/src/app/primitiv/fizetesimod/fizetesimod-container/fizetesimod-container.component.html
+++ b/src/app/primitiv/fizetesimod/fizetesimod-container/fizetesimod-container.component.html
@@ -17,3 +17,6 @@
 <ng-container *ngIf="fizetesimodservice.ContainerMode === 3">
   <app-fizetesimod-szerkesztes></app-fizetesimod-szerkesztes>
 </ng-container>
+
+<app-errormodal [cim]="fizetesimodservice.cim"></app-errormodal>
+<app-spinner *ngIf="eppFrissit"></app-spinner>
