--- a/src/app/primitiv/fizetesimod/fizetesimod-egy/fizetesimod-egy.component.html
+++ b/src/app/primitiv/fizetesimod/fizetesimod-egy/fizetesimod-egy.component.html
@@ -31,7 +31,10 @@ Modositas = 3
 
   <ng-container *ngIf="fizetesimodservice.EgyMode === 1">
     <div [@rowanimation]>
-      <app-fizetesimod-reszletek></app-fizetesimod-reszletek>
+      <app-reszletek [cim]="fizetesimodservice.cim"
+                     [item]="fizetesimodservice.Dto[fizetesimodservice.DtoSelectedIndex]"
+                     [colsets]="fizetesimodservice.ReszletekSettings">
+      </app-reszletek>
     </div>
   </ng-container>
   <ng-container *ngIf="fizetesimodservice.EgyMode === 2">
