--- a/src/app/primitiv/helyseg/helyseg-container/helyseg-container.component.html
+++ b/src/app/primitiv/helyseg/helyseg-container/helyseg-container.component.html
@@ -17,3 +17,6 @@
 <ng-container *ngIf="helysegservice.ContainerMode === 3">
   <app-helyseg-szerkesztes></app-helyseg-szerkesztes>
 </ng-container>
+
+<app-errormodal [cim]="helysegservice.cim"></app-errormodal>
+<app-spinner *ngIf="eppFrissit"></app-spinner>
