--- a/src/app/primitiv/helyseg/helyseg-egy/helyseg-egy.component.html
+++ b/src/app/primitiv/helyseg/helyseg-egy/helyseg-egy.component.html
@@ -31,7 +31,10 @@
 
   <ng-container *ngIf="helysegservice.EgyMode === 1">
     <div [@rowanimation]>
-      <app-helyseg-reszletek></app-helyseg-reszletek>
+      <app-reszletek [cim]="helysegservice.cim"
+                     [item]="helysegservice.Dto[helysegservice.DtoSelectedIndex]"
+                     [colsets]="helysegservice.ReszletekSettings">
+      </app-reszletek>
     </div>
   </ng-container>
   <ng-container *ngIf="helysegservice.EgyMode === 2">
