--- a/src/app/primitiv/me/me-egy/me-egy.component.html
+++ b/src/app/primitiv/me/me-egy/me-egy.component.html
@@ -31,7 +31,10 @@
 
   <ng-container *ngIf="meservice.EgyMode === 1">
     <div [@rowanimation]>
-      <app-me-reszletek></app-me-reszletek>
+      <app-reszletek [cim]="meservice.cim"
+                     [item]="meservice.Dto[meservice.DtoSelectedIndex]"
+                     [colsets]="meservice.ReszletekSettings">
+      </app-reszletek>
     </div>
   </ng-container>
   <ng-container *ngIf="meservice.EgyMode === 2">
