--- a/src/app/primitiv/penznem/penznem-container/penznem-container.component.html
+++ b/src/app/primitiv/penznem/penznem-container/penznem-container.component.html
@@ -17,3 +17,6 @@
 <ng-container *ngIf="penznemservice.ContainerMode === 3">
   <app-penznem-szerkesztes></app-penznem-szerkesztes>
 </ng-container>
+
+<app-errormodal [cim]="penznemservice.cim"></app-errormodal>
+<app-spinner *ngIf="eppFrissit"></app-spinner>
