--- a/src/app/primitiv/penznem/penznem-egy/penznem-egy.component.html
+++ b/src/app/primitiv/penznem/penznem-egy/penznem-egy.component.html
@@ -31,7 +31,10 @@ Modositas = 3
 
   <ng-container *ngIf="penznemservice.EgyMode === 1">
     <div [@rowanimation]>
-      <app-penznem-reszletek></app-penznem-reszletek>
+      <app-reszletek [cim]="penznemservice.cim"
+                     [item]="penznemservice.Dto[penznemservice.DtoSelectedIndex]"
+                     [colsets]="penznemservice.ReszletekSettings">
+      </app-reszletek>
     </div>
   </ng-container>
   <ng-container *ngIf="penznemservice.EgyMode === 2">
