--- a/src/app/primitiv/teendo/teendo-egy/teendo-egy.component.html
+++ b/src/app/primitiv/teendo/teendo-egy/teendo-egy.component.html
@@ -31,7 +31,10 @@ Modositas = 3
 
   <ng-container *ngIf="teendoservice.EgyMode === 1">
     <div [@rowanimation]>
-      <app-teendo-reszletek></app-teendo-reszletek>
+      <app-reszletek [cim]="teendoservice.cim"
+                     [item]="teendoservice.Dto[teendoservice.DtoSelectedIndex]"
+                     [colsets]="teendoservice.ReszletekSettings">
+      </app-reszletek>
     </div>
   </ng-container>
   <ng-container *ngIf="teendoservice.EgyMode === 2">
