--- a/src/app/primitiv/termekdij/termekdij-container/termekdij-container.component.html
+++ b/src/app/primitiv/termekdij/termekdij-container/termekdij-container.component.html
@@ -17,3 +17,6 @@
 <ng-container *ngIf="termekdijservice.ContainerMode === 3">
   <app-termekdij-szerkesztes></app-termekdij-szerkesztes>
 </ng-container>
+
+<app-errormodal [cim]="termekdijservice.cim"></app-errormodal>
+<app-spinner *ngIf="eppFrissit"></app-spinner>
