--- a/src/app/primitiv/termekdij/termekdij-egy/termekdij-egy.component.html
+++ b/src/app/primitiv/termekdij/termekdij-egy/termekdij-egy.component.html
@@ -31,7 +31,10 @@
 
   <ng-container *ngIf="termekdijservice.EgyMode === 1">
     <div [@rowanimation]>
-      <app-termekdij-reszletek></app-termekdij-reszletek>
+      <app-reszletek [cim]="termekdijservice.cim"
+                     [item]="termekdijservice.Dto[termekdijservice.DtoSelectedIndex]"
+                     [colsets]="termekdijservice.ReszletekSettings">
+      </app-reszletek>
     </div>
   </ng-container>
   <ng-container *ngIf="termekdijservice.EgyMode === 2">
