részletek komponensen kurzor

--- a/src/app/primitiv/felhasznalo/felhasznalo-egy/felhasznalo-egy.component.html
+++ b/src/app/primitiv/felhasznalo/felhasznalo-egy/felhasznalo-egy.component.html
@@ -43,7 +43,8 @@ Tevekenyseg = 5
     <div [@rowanimation]>
       <app-reszletek [cim]="felhasznaloservice.cim"
                      [item]="felhasznaloservice.Dto[felhasznaloservice.DtoSelectedIndex]"
-                     [colsets]="felhasznaloservice.ReszletekSettings">
+                     [colsets]="felhasznaloservice.ReszletekSettings"
+                     [(selectedindex)]="ri">
       </app-reszletek>
     </div>
   </ng-container>
