--- a/src/app/primitiv/teendo/teendo-container/teendo-container.component.html
+++ b/src/app/primitiv/teendo/teendo-container/teendo-container.component.html
@@ -9,7 +9,7 @@
   <app-blank></app-blank>
 </ng-container>
 <ng-container *ngIf="teendoservice.ContainerMode === 1">
-  <app-teendo-list [(selectedindex)]="ti"></app-teendo-list>
+  <app-teendo-list></app-teendo-list>
 </ng-container>
 <ng-container *ngIf="teendoservice.ContainerMode === 2">
   <app-teendo-egy></app-teendo-egy>
