--- a/src/app/tools/reszletek/reszletek.component.html
+++ b/src/app/tools/reszletek/reszletek.component.html
@@ -2,7 +2,7 @@
   <h5>{{cim}} részletesen</h5>
   <table class="table ng table-bordered table-sm table-responsive" style="border: none">
     <tbody>
-    <tr *ngFor="let colset of colsets; let i = index">
+    <tr *ngFor="let colset of colsets; let i = index" (click)="RowClick(i)" [class.active]="i == selectedindex">
       <td class="egylabel">{{colset.Title}}:</td>
       <td>
         <div *ngIf="colset.Type === 'INT'">{{item[colset.Name]}}</div>
