--- a/src/app/primitiv/afakulcs/afakulcs-egy/afakulcs-egy.component.html
+++ b/src/app/primitiv/afakulcs/afakulcs-egy/afakulcs-egy.component.html
@@ -34,7 +34,8 @@
     <div [@rowanimation]>
       <app-reszletek [cim]="afakulcsservice.cim"
                      [item]="afakulcsservice.Dto[afakulcsservice.DtoSelectedIndex]"
-                     [colsets]="afakulcsservice.ReszletekSettings">
+                     [colsets]="afakulcsservice.ReszletekSettings"
+                     [(selectedindex)]="ri">
       </app-reszletek>
     </div>
   </ng-container>
