--- a/src/app/primitiv/fizetesimod/fizetesimod-egy/fizetesimod-egy.component.html
+++ b/src/app/primitiv/fizetesimod/fizetesimod-egy/fizetesimod-egy.component.html
@@ -33,7 +33,8 @@ Modositas = 3
     <div [@rowanimation]>
       <app-reszletek [cim]="fizetesimodservice.cim"
                      [item]="fizetesimodservice.Dto[fizetesimodservice.DtoSelectedIndex]"
-                     [colsets]="fizetesimodservice.ReszletekSettings">
+                     [colsets]="fizetesimodservice.ReszletekSettings"
+                     [(selectedindex)]="ri">
       </app-reszletek>
     </div>
   </ng-container>
