--- a/src/app/primitiv/helyseg/helyseg-egy/helyseg-egy.component.html
+++ b/src/app/primitiv/helyseg/helyseg-egy/helyseg-egy.component.html
@@ -33,7 +33,8 @@
     <div [@rowanimation]>
       <app-reszletek [cim]="helysegservice.cim"
                      [item]="helysegservice.Dto[helysegservice.DtoSelectedIndex]"
-                     [colsets]="helysegservice.ReszletekSettings">
+                     [colsets]="helysegservice.ReszletekSettings"
+                     [(selectedindex)]="ri">
       </app-reszletek>
     </div>
   </ng-container>
