--- a/src/app/primitiv/irattipus/irattipus-egy/irattipus-egy.component.html
+++ b/src/app/primitiv/irattipus/irattipus-egy/irattipus-egy.component.html
@@ -33,7 +33,8 @@ Modositas = 3
     <div [@rowanimation]>
       <app-reszletek [cim]="irattipusservice.cim"
                      [item]="irattipusservice.Dto[irattipusservice.DtoSelectedIndex]"
-                     [colsets]="irattipusservice.ReszletekSettings">
+                     [colsets]="irattipusservice.ReszletekSettings"
+                     [(selectedindex)]="ri">
       </app-reszletek>
     </div>
   </ng-container>
