--- a/src/app/primitiv/me/me-egy/me-egy.component.html
+++ b/src/app/primitiv/me/me-egy/me-egy.component.html
@@ -33,7 +33,8 @@
     <div [@rowanimation]>
       <app-reszletek [cim]="meservice.cim"
                      [item]="meservice.Dto[meservice.DtoSelectedIndex]"
-                     [colsets]="meservice.ReszletekSettings">
+                     [colsets]="meservice.ReszletekSettings"
+                     [(selectedindex)]="ri">
       </app-reszletek>
     </div>
   </ng-container>
