--- a/src/app/primitiv/penznem/penznem-egy/penznem-egy.component.html
+++ b/src/app/primitiv/penznem/penznem-egy/penznem-egy.component.html
@@ -33,7 +33,8 @@ Modositas = 3
     <div [@rowanimation]>
       <app-reszletek [cim]="penznemservice.cim"
                      [item]="penznemservice.Dto[penznemservice.DtoSelectedIndex]"
-                     [colsets]="penznemservice.ReszletekSettings">
+                     [colsets]="penznemservice.ReszletekSettings"
+                     [(selectedindex)]="ri">
       </app-reszletek>
     </div>
   </ng-container>
