--- a/src/app/primitiv/teendo/teendo-list/teendo-list.component.html
+++ b/src/app/primitiv/teendo/teendo-list/teendo-list.component.html
@@ -17,7 +17,7 @@
     </tr>
     </thead>
     <tbody>
-    <tr *ngFor="let item of teendoservice.Dto; let i = index" (click)="RowClick(i)" [class.active]="i == selectedindex">
+    <tr *ngFor="let item of teendoservice.Dto; let i = index">
       <td *ngIf="teendoservice.zoom" style="text-align: right; color: blue; text-decoration: underline; cursor: pointer"
           (click)="selectforzoom(i)"><i class="fa fa-check" aria-hidden="true"></i></td>
       <td style="text-align: right; color: blue; text-decoration: underline; cursor: pointer"
