--- a/src/app/primitiv/termekdij/termekdij-egy/termekdij-egy.component.html
+++ b/src/app/primitiv/termekdij/termekdij-egy/termekdij-egy.component.html
@@ -33,7 +33,8 @@
     <div [@rowanimation]>
       <app-reszletek [cim]="termekdijservice.cim"
                      [item]="termekdijservice.Dto[termekdijservice.DtoSelectedIndex]"
-                     [colsets]="termekdijservice.ReszletekSettings">
+                     [colsets]="termekdijservice.ReszletekSettings"
+                     [(selectedindex)]="ri">
       </app-reszletek>
     </div>
   </ng-container>
