--- a/src/app/csoport/csoport-egy/csoport-egy.component.html
+++ b/src/app/csoport/csoport-egy/csoport-egy.component.html
@@ -39,7 +39,11 @@ Jog = 5
 
   <ng-container *ngIf="csoportservice.EgyMode === 1">
     <div [@rowanimation]>
-      <app-csoport-reszletek></app-csoport-reszletek>
+      <app-reszletek [cim]="csoportservice.cim"
+                     [item]="csoportservice.Dto[csoportservice.DtoSelectedIndex]"
+                     [colsets]="csoportservice.ReszletekSettings"
+                     [(selectedindex)]="ri">
+      </app-reszletek>
     </div>
   </ng-container>
   <ng-container *ngIf="csoportservice.EgyMode === 2">
