--- a/src/app/volume/volume-container/volume-container.component.html
+++ b/src/app/volume/volume-container/volume-container.component.html
@@ -9,3 +9,6 @@
 <ng-container *ngIf="volumeservice.ContainerMode === 1">
   <app-volume-egy></app-volume-egy>
 </ng-container>
+
+<app-errormodal [cim]="volumeservice.cim"></app-errormodal>
+<app-spinner *ngIf="eppFrissit"></app-spinner>
