--- a/src/app/volume/volume-egy/volume-egy.component.html
+++ b/src/app/volume/volume-egy/volume-egy.component.html
@@ -22,10 +22,18 @@
   }-->
 
   <ng-container *ngIf="volumeservice.EgyMode === 0">
-    <app-volume-reszletek></app-volume-reszletek>
+    <div [@rowanimation]>
+      <app-reszletek [cim]="volumeservice.cim"
+                     [item]="volumeservice.Dto[volumeservice.DtoSelectedIndex]"
+                     [colsets]="volumeservice.ReszletekSettings"
+                     [(selectedindex)]="ri">
+      </app-reszletek>
+    </div>
   </ng-container>
   <ng-container *ngIf="volumeservice.EgyMode === 1">
-    <app-volume-teszt></app-volume-teszt>
+    <div [@rowanimation]>
+      <app-volume-teszt></app-volume-teszt>
+    </div>
   </ng-container>
 
   <app-errormodal [cim]="volumeservice.cim"></app-errormodal>
