--- a/src/app/szamlazasirend/projekt-szamlazasirend-container/projekt-szamlazasirend-container.component.html
+++ b/src/app/szamlazasirend/projekt-szamlazasirend-container/projekt-szamlazasirend-container.component.html
@@ -14,3 +14,6 @@ Uj = 3
 <ng-container *ngIf="szamlazasirendservice.ContainerMode === 3">
   <app-projekt-szamlazasirend-szerkesztes></app-projekt-szamlazasirend-szerkesztes>
 </ng-container>
+
+<app-errormodal [cim]="szamlazasirendservice.cim"></app-errormodal>
+<app-spinner *ngIf="eppFrissit"></app-spinner>
