--- a/src/app/szamlazasirend/projekt-szamlazasirend-egy/projekt-szamlazasirend-egy.component.html
+++ b/src/app/szamlazasirend/projekt-szamlazasirend-egy/projekt-szamlazasirend-egy.component.html
@@ -28,7 +28,11 @@
   }-->
   <ng-container *ngIf="szamlazasirendservice.EgyMode === 1">
     <div [@rowanimation]>
-      <app-projekt-szamlazasirend-reszletek></app-projekt-szamlazasirend-reszletek>
+      <app-reszletek [cim]="szamlazasirendservice.cim"
+                     [item]="szamlazasirendservice.Dto[szamlazasirendservice.DtoSelectedIndex]"
+                     [colsets]="szamlazasirendservice.ReszletekSettings"
+                     [(selectedindex)]="ri">
+      </app-reszletek>
     </div>
   </ng-container>
   <ng-container *ngIf="szamlazasirendservice.EgyMode === 2">
