--- a/src/app/projektteendo/projekt-teendo-container/projekt-teendo-container.component.html
+++ b/src/app/projektteendo/projekt-teendo-container/projekt-teendo-container.component.html
@@ -14,3 +14,6 @@ Uj = 3
 <ng-container *ngIf="projektteendoservice.ContainerMode === 3">
   <app-projekt-teendo-szerkesztes></app-projekt-teendo-szerkesztes>
 </ng-container>
+
+<app-errormodal [cim]="projektteendoservice.cim"></app-errormodal>
+<app-spinner *ngIf="eppFrissit"></app-spinner>
