--- a/src/app/projektteendo/projekt-teendo-egy/projekt-teendo-egy.component.html
+++ b/src/app/projektteendo/projekt-teendo-egy/projekt-teendo-egy.component.html
@@ -33,7 +33,11 @@
   }-->
   <ng-container *ngIf="projektteendoservice.EgyMode === 1">
     <div [@rowanimation]>
-      <app-projekt-teendo-reszletek></app-projekt-teendo-reszletek>
+      <app-reszletek [cim]="projektteendoservice.cim"
+                     [item]="projektteendoservice.Dto[projektteendoservice.DtoSelectedIndex]"
+                     [colsets]="projektteendoservice.ReszletekSettings"
+                     [(selectedindex)]="ri">
+      </app-reszletek>
     </div>
   </ng-container>
   <ng-container *ngIf="projektteendoservice.EgyMode === 2">
