--- a/src/app/kifizetes/bizonylat-kifizetes-egy/bizonylat-kifizetes-egy.component.html
+++ b/src/app/kifizetes/bizonylat-kifizetes-egy/bizonylat-kifizetes-egy.component.html
@@ -33,7 +33,11 @@ Modositas = 3
 
   <ng-container *ngIf="bizonylatkifizetesservice.EgyMode === 1">
     <div [@rowanimation]>
-      <app-bizonylat-kifizetes-reszletek></app-bizonylat-kifizetes-reszletek>
+      <app-reszletek [cim]="bizonylatkifizetesservice.cim"
+                     [item]="bizonylatkifizetesservice.Dto[bizonylatkifizetesservice.DtoSelectedIndex]"
+                     [colsets]="bizonylatkifizetesservice.ReszletekSettings"
+                     [(selectedindex)]="ri">
+      </app-reszletek>
     </div>
   </ng-container>
   <ng-container *ngIf="bizonylatkifizetesservice.EgyMode === 2">
