--- a/src/app/dokumentum/dokumentum-egy/dokumentum-egy.component.html
+++ b/src/app/dokumentum/dokumentum-egy/dokumentum-egy.component.html
@@ -30,7 +30,11 @@
   }-->
   <ng-container *ngIf="dokumentumservice.EgyMode === 1">
     <div [@rowanimation]>
-      <app-dokumentum-reszletek></app-dokumentum-reszletek>
+      <app-reszletek [cim]="dokumentumservice.cim"
+                     [item]="dokumentumservice.Dto[dokumentumservice.DtoSelectedIndex]"
+                     [colsets]="dokumentumservice.ReszletekSettings"
+                     [(selectedindex)]="ri">
+      </app-reszletek>
     </div>
   </ng-container>
   <ng-container *ngIf="dokumentumservice.EgyMode === 2">
