--- a/src/app/cikk/cikk-container/cikk-container.component.html
+++ b/src/app/cikk/cikk-container/cikk-container.component.html
@@ -17,3 +17,6 @@
 <ng-container *ngIf="cikkservice.ContainerMode === 3">
   <app-cikk-szerkesztes></app-cikk-szerkesztes>
 </ng-container>
+
+<app-errormodal [cim]="cikkservice.cim"></app-errormodal>
+<app-spinner *ngIf="eppFrissit"></app-spinner>
