--- a/src/app/cikk/cikk-egy/cikk-egy.component.html
+++ b/src/app/cikk/cikk-egy/cikk-egy.component.html
@@ -40,7 +40,11 @@
 
   <ng-container *ngIf="cikkservice.EgyMode === 1">
     <div [@rowanimation]>
-      <app-cikk-reszletek></app-cikk-reszletek>
+      <app-reszletek [cim]="cikkservice.cim"
+                     [item]="cikkservice.Dto[cikkservice.DtoSelectedIndex]"
+                     [colsets]="cikkservice.ReszletekSettings"
+                     [(selectedindex)]="ri">
+      </app-reszletek>
     </div>
   </ng-container>
   <ng-container *ngIf="cikkservice.EgyMode === 2">
