--- a/src/app/penztar/penztar-container/penztar-container.component.html
+++ b/src/app/penztar/penztar-container/penztar-container.component.html
@@ -14,3 +14,6 @@
 <ng-container *ngIf="penztarservice.ContainerMode === 3">
   <app-penztar-szerkesztes></app-penztar-szerkesztes>
 </ng-container>
+
+<app-errormodal [cim]="penztarservice.cim"></app-errormodal>
+<app-spinner *ngIf="eppFrissit"></app-spinner>
