--- a/src/app/ajanlatkeres/ajanlatkeres-egy/ajanlatkeres-egy.component.html
+++ b/src/app/ajanlatkeres/ajanlatkeres-egy/ajanlatkeres-egy.component.html
@@ -25,13 +25,22 @@
   }-->
 
   <ng-container *ngIf="ajanlatkeresservice.EgyMode === 1">
-    <app-ajanlatkeres-reszletek></app-ajanlatkeres-reszletek>
+    <div [@rowanimation]>
+      <app-reszletek [cim]="ajanlatkeresservice.cim"
+                     [item]="ajanlatkeresservice.Dto[ajanlatkeresservice.DtoSelectedIndex]"
+                     [colsets]="ajanlatkeresservice.ReszletekSettings"
+                     [(selectedindex)]="ri">
+      </app-reszletek>
+    </div>
   </ng-container>
   <ng-container *ngIf="ajanlatkeresservice.EgyMode === 2">
-    <app-ajanlatkeres-projekt></app-ajanlatkeres-projekt>
+    <div [@rowanimation]>
+      <app-ajanlatkeres-projekt></app-ajanlatkeres-projekt>
+    </div>
   </ng-container>
 
   <app-errormodal [cim]="ajanlatkeresservice.cim"></app-errormodal>
+  <app-spinner *ngIf="eppFrissit"></app-spinner>
 </div>
 
 
