--- a/src/app/irat/irat-container/irat-container.component.html
+++ b/src/app/irat/irat-container/irat-container.component.html
@@ -14,3 +14,6 @@
 <ng-container *ngIf="iratservice.ContainerMode === 3">
   <app-irat-szerkesztes></app-irat-szerkesztes>
 </ng-container>
+
+<app-errormodal [cim]="iratservice.cim"></app-errormodal>
+<app-spinner *ngIf="eppFrissit"></app-spinner>
