--- a/src/app/irat/irat-egy/irat-egy.component.html
+++ b/src/app/irat/irat-egy/irat-egy.component.html
@@ -50,7 +50,11 @@
 
   <ng-container *ngIf="iratservice.EgyMode === 1">
     <div [@rowanimation]>
-      <app-irat-reszletek></app-irat-reszletek>
+      <app-reszletek [cim]="iratservice.cim"
+                     [item]="iratservice.Dto[iratservice.DtoSelectedIndex]"
+                     [colsets]="iratservice.ReszletekSettings"
+                     [(selectedindex)]="ri">
+      </app-reszletek>
     </div>
   </ng-container>
   <ng-container *ngIf="iratservice.EgyMode === 2">
@@ -75,7 +79,12 @@
   <ng-container *ngIf="iratservice.EgyMode === 5">
     <div [@rowanimation]>
       <app-irat-nincsprojekt *ngIf="nincsProjekt"></app-irat-nincsprojekt>
-      <app-projekt-reszletek *ngIf="!nincsProjekt"></app-projekt-reszletek>
+      <app-reszletek *ngIf="!nincsProjekt"
+                     [cim]="projektservice.cim"
+                     [item]="projektservice.Dto[projektservice.DtoSelectedIndex]"
+                     [colsets]="projektservice.ReszletekSettings"
+                     [(selectedindex)]="pri">
+      </app-reszletek>
     </div>
   </ng-container>
   <ng-container *ngIf="iratservice.EgyMode === 6">
