--- a/src/app/penztar/penztar-egy/penztar-egy.component.html
+++ b/src/app/penztar/penztar-egy/penztar-egy.component.html
@@ -40,7 +40,11 @@
 
   <ng-container *ngIf="penztarservice.EgyMode === 1">
     <div [@rowanimation]>
-      <app-penztar-reszletek></app-penztar-reszletek>
+      <app-reszletek [cim]="penztarservice.cim"
+                     [item]="penztarservice.Dto[penztarservice.DtoSelectedIndex]"
+                     [colsets]="penztarservice.ReszletekSettings"
+                     [(selectedindex)]="ri">
+      </app-reszletek>
     </div>
   </ng-container>
   <ng-container *ngIf="penztarservice.EgyMode === 2">
