--- a/src/app/projekt/projekt-container/projekt-container.component.html
+++ b/src/app/projekt/projekt-container/projekt-container.component.html
@@ -22,3 +22,6 @@ Export = 4
 <ng-container *ngIf="projektservice.ContainerMode === 4">
   <app-projekt-export></app-projekt-export>
 </ng-container>
+
+<app-errormodal [cim]="projektservice.cim"></app-errormodal>
+<app-spinner *ngIf="eppFrissit"></app-spinner>
