--- a/src/app/projekt/projekt-egy/projekt-egy.component.html
+++ b/src/app/projekt/projekt-egy/projekt-egy.component.html
@@ -68,7 +68,13 @@
   }-->
 
   <ng-container *ngIf="projektservice.EgyMode === 1">
-    <div [@rowanimation]><app-projekt-reszletek></app-projekt-reszletek></div>
+    <div [@rowanimation]>
+      <app-reszletek [cim]="projektservice.cim"
+                     [item]="projektservice.Dto[projektservice.DtoSelectedIndex]"
+                     [colsets]="projektservice.ReszletekSettings"
+                     [(selectedindex)]="ri">
+      </app-reszletek>
+    </div>
   </ng-container>
   <ng-container *ngIf="projektservice.EgyMode === 2">
     <div [@rowanimation]>
