--- a/src/app/ugyfel/ugyfel-egy/ugyfel-egy.component.html
+++ b/src/app/ugyfel/ugyfel-egy/ugyfel-egy.component.html
@@ -47,7 +47,11 @@
 
   <ng-container *ngIf="ugyfelservice.EgyMode === 1">
     <div [@rowanimation]>
-      <app-ugyfel-reszletek></app-ugyfel-reszletek>
+      <app-reszletek [cim]="ugyfelservice.cim"
+                     [item]="ugyfelservice.Dto[ugyfelservice.DtoSelectedIndex]"
+                     [colsets]="ugyfelservice.ReszletekSettings"
+                     [(selectedindex)]="ri">
+      </app-reszletek>
     </div>
   </ng-container>
   <ng-container *ngIf="ugyfelservice.EgyMode === 2">
