--- a/src/app/ugyfel/ugyfel-list/ugyfel-list.component.html
+++ b/src/app/ugyfel/ugyfel-list/ugyfel-list.component.html
@@ -10,26 +10,43 @@
                      [enUj]="!eppFrissit && mod" (Uj)="onUj()"
                      [visZoom]="ugyfelservice.zoom" (StopZoom)="stopzoom()">
   </app-ugyfeltoolbar>
+
   <table class="table table-bordered table-sm table-responsive" style="border: none">
     <thead>
     <tr>
       <th *ngIf="ugyfelservice.zoom"></th>
       <th>Id</th>
       <th></th>
-      <th>Név</th>
-      <th>Cég</th>
-      <th>Beosztás</th>
-      <th>Irányítószám</th>
-      <th>Helységnév</th>
-      <th>Közterület</th>
-      <th>Közterület tipus</th>
-      <th>Házszám</th>
-      <th>Adószám</th>
-      <th>EU adószám</th>
-      <th>Telefon</th>
-      <th>Email</th>
-      <th>Egyéb link</th>
-      <th>Ajánlotta</th>
+      <th>
+        <div style="white-space: nowrap">
+          <div>Név</div>
+          <div>Cím</div>
+        </div>
+      </th>
+      <th>
+        <div style="white-space: nowrap">
+          <div>Cég</div>
+          <div>Beosztás</div>
+        </div>
+      </th>
+      <th>
+        <div style="white-space: nowrap">
+          <div>Email</div>
+          <div>Telefon</div>
+        </div>
+      </th>
+      <th>
+        <div style="white-space: nowrap">
+          <div>Adószám</div>
+          <div>EU adószám</div>
+        </div>
+      </th>
+      <th>
+        <div style="white-space: nowrap">
+          <div>Egyéb link</div>
+          <div>Ajánlotta</div>
+        </div>
+      </th>
     </tr>
     </thead>
     <tbody>
@@ -40,20 +57,24 @@
         <td>{{item.Csoport}}</td>
         <td>
           <div style="width: 200px">{{item.Nev}}</div>
+          <div style="width: 300px">{{item.Cim}}</div>
         </td>
-        <td>{{item.Ceg}}</td>
-        <td>{{item.Beosztas}}</td>
-        <td>{{item.Iranyitoszam}}</td>
-        <td>{{item.Helysegnev}}</td>
-        <td>{{item.Kozterulet}}</td>
-        <td>{{item.Kozterulettipus}}</td>
-        <td>{{item.Hazszam}}</td>
-        <td>{{item.Adoszam}}</td>
-        <td>{{item.Euadoszam}}</td>
-        <td>{{item.Telefon}}</td>
-        <td>{{item.Email}}</td>
-        <td><a target="_blank" rel="noopener noreferrer" href={{item.Egyeblink}}>{{item.Egyeblink}}</a></td>
-        <td>{{item.Ajanlotta}}</td>
+        <td>
+          <div style="width: 200px">{{item.Ceg}}</div>
+          <div style="width: 200px">{{item.Beosztas}}</div>
+        </td>
+        <td>
+          <div>{{item.Email}}</div>
+          <div>{{item.Telefon}}</div>
+        </td>
+        <td>
+          <div>{{item.Adoszam}}</div>
+          <div>{{item.Euadoszam}}</div>
+        </td>
+        <td>
+          <div>{{item.Egyeblink}}</div>
+          <div>{{item.Ajanlotta}}</div>
+        </td>
       </tr>
       <tr *ngIf="item.Megjegyzes !== null && item.Megjegyzes !== ''">
         <td colspan="11">{{item.Megjegyzes}}</td>
